# orb-messages

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml  flake.nix  mcu_messaging_common.proto  mcu_messaging_sec.proto  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  relyance-sci.yml
messages/: common.options  common.proto  main.options  main.proto  mcu.proto  mcu_messaging_common.options  mcu_messaging_common.proto  mcu_messaging_main.options  mcu_messaging_main.proto  mcu_messaging_sec.proto  orb.proto  sec.options  sec.proto
messages/private_stub/: mcu_messaging_sec_priv.proto  sec_priv.proto
src/: lib.rs  mcu_main.rs  mcu_sec.rs  mcu_zenoh.rs
zephyr/: CMakeLists.txt  Kconfig  module.yml
