[package]
name = "orb-mcu-messaging"
version = "0.3.0"
authors = [
    "Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>",
]
edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
publish = false
repository = "https://github.com/worldcoin/open-orb-mcu-messaging"
rust-version = "1.74" # See rust-toolchain.toml

[dependencies]
prost = "0.12.3"
thiserror = "1.0.57"

[build-dependencies]
prost-build = "0.12.3"
