[package]
name = "orb-messages"
version = "0.3.0"
description = "Protobuf messages between the jetson and the mcus"
authors = ["Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>"]
publish = false

edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-messages"
rust-version = "1.74" # See rust-toolchain.toml

[dependencies]
prost = "0.12.3"
thiserror = "1"

[build-dependencies]
prost-build = "0.12.3"
