[package]
name = "orb-messages"
version = "0.0.0"
description = "Protobuf messages between the jetson and the mcus"
authors = ["Cyril Fougeray <cyril.fougeray@toolsforhumanity.com>"]
publish = false

edition = "2021"
license = "MIT OR (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/worldcoin/orb-messages"
rust-version = "1.91" # See rust-toolchain.toml

[dependencies]
prost = "0.12.3"
thiserror = { version = "2.0.17", default-features = false }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
prost-build = "0.12.3"
